--- a/sales-microservice/package.json
+++ b/sales-microservice/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "sequelize": "^6.37.7",
     "tsc-alias": "^1.8.16",
     "tsconfig-paths": "^4.2.0"
   }
