--- a/inventory-microservice/package.json
+++ b/inventory-microservice/package.json
@@ -13,8 +13,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/express": "^5.0.3",
-    "@types/node": "^24.7.1",
+    "@types/express": "^5.0.4",
+    "@types/node": "^24.9.1",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
@@ -22,6 +22,8 @@
   "dependencies": {
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "mysql2": "^3.15.3",
+    "sequelize": "^6.37.7",
     "tsc-alias": "^1.8.16",
     "tsconfig-paths": "^4.2.0"
   }
