--- a/inventory-microservice/package.json
+++ b/inventory-microservice/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@types/express": "^5.0.4",
     "@types/node": "^24.9.1",
+    "@types/sequelize": "^6.12.0",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
