feat(database): connect all microservices to a shared MySQL instance

--- a/sales-microservice/.env.example
+++ b/sales-microservice/.env.example
@@ -1,6 +1,6 @@
-PORT=3003
-DB_NAME=coffee_shop_db
-DB_USER=admin
-DB_PASS=12345
-DB_HOST=localhost
+DB_NAME=coffee_shop
+DB_USER=root
+DB_PASS=123
+DB_HOST=mysql
 DB_PORT=3306
+PORT=3003
