--- a/users-microservice/.env.example
+++ b/users-microservice/.env.example
@@ -1,5 +1,6 @@
-DB_NAME=store_db
-DB_USER=admin
-DB_PASS=admin123
-DB_HOST=localhost
-DB_PORT=3004
+DB_NAME=coffee_shop
+DB_USER=root
+DB_PASS=123
+DB_HOST=mysql
+DB_PORT=3306
+PORT=3004
