--- a/users-microservice/package.json
+++ b/users-microservice/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@types/express": "^5.0.3",
     "@types/node": "^24.7.1",
+    "@types/sequelize": "^4.28.20",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
@@ -22,6 +23,9 @@
   "dependencies": {
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "mysql2": "^3.15.3",
+    "sequelize": "^6.37.7",
+    "sequelize-typescript": "^2.1.6",
     "tsc-alias": "^1.8.16",
     "tsconfig-paths": "^4.2.0"
   }
