--- a/sales-microservice/tsconfig.json
+++ b/sales-microservice/tsconfig.json
@@ -20,7 +20,8 @@
     "baseUrl": "src",
     "paths": {
       "@/*": ["*"]
-    }
+    },
+    "ignoreDeprecations": "6.0"
   },
   "include": ["src"],
   "exclude": ["node_modules", "dist"]
