--- a/inventory-microservice/.env.example
+++ b/inventory-microservice/.env.example
@@ -1,6 +1,6 @@
-DB_NAME=coffee_shop
-DB_USER=root
-DB_PASS=123
-DB_HOST=mysql
+DB_NAME=coffee_shop_db
+DB_USER=admin
+DB_PASS=admin123
+DB_HOST=localhost
 DB_PORT=3306
-PORT=3002
+PORT=3003
