--- a/inventory-microservice/package.json
+++ b/inventory-microservice/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^5.0.4",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.9.1",
     "@types/sequelize": "^6.12.0",
     "nodemon": "^3.1.10",
@@ -26,6 +27,8 @@
     "mysql2": "^3.15.3",
     "sequelize": "^6.37.7",
     "tsc-alias": "^1.8.16",
-    "tsconfig-paths": "^4.2.0"
+    "tsconfig-paths": "^4.2.0",
+    "jsonwebtoken": "^9.0.2"
+
   }
 }
