--- a/sales-microservice/package.json
+++ b/sales-microservice/package.json
@@ -13,7 +13,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/express": "^5.0.3",
+    "@types/express": "^5.0.5",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.7.1",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
@@ -22,6 +23,7 @@
   "dependencies": {
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.15.3",
     "sequelize": "^6.37.7",
     "tsc-alias": "^1.8.16",
