--- a/users-microservice/package.json
+++ b/users-microservice/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^5.0.3",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.7.1",
     "@types/sequelize": "^4.28.20",
     "nodemon": "^3.1.10",
@@ -21,8 +22,10 @@
     "typescript": "^5.9.3"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.3",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.15.3",
     "sequelize": "^6.37.7",
     "sequelize-typescript": "^2.1.6",
