--- a/nginx.conf
+++ b/nginx.conf
@@ -1,32 +1,35 @@
-user  nginx;
-worker_processes  auto;
+user nginx;
+worker_processes auto;
 
-error_log  /var/log/nginx/error.log warn;
-pid        /var/run/nginx.pid;
+error_log /var/log/nginx/error.log warn;
+pid /var/run/nginx.pid;
 
 events {
-    worker_connections  1024;
+    worker_connections 1024;
 }
 
 http {
-    include       /etc/nginx/mime.types;
-    default_type  application/json;
+    include /etc/nginx/mime.types;
+    default_type application/json;
 
     log_format main '$remote_addr - $remote_user [$time_local] "$request" '
                     '$status $body_bytes_sent "$http_referer" '
                     '"$http_user_agent" "$http_x_forwarded_for"';
 
-    access_log  /var/log/nginx/access.log main;
+    access_log /var/log/nginx/access.log main;
 
     proxy_connect_timeout 5s;
-    proxy_send_timeout    30s;
-    proxy_read_timeout    30s;
+    proxy_send_timeout 30s;
+    proxy_read_timeout 30s;
 
     proxy_set_header Host $host;
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header Authorization $http_authorization;
 
+    # ============================================================
+    #   BACKENDS — Correcto en Docker Compose y listo para escalado
+    # ============================================================
     upstream users_backend {
         least_conn;
         server users-service:3001;
@@ -47,48 +50,30 @@ http {
         server sales-service:3004;
     }
 
+    # ============================================================
+    #   SERVER
+    # ============================================================
     server {
         listen 80;
-        server_name coffee.shop.com;
-
-        location = /_nginx_health {
-            add_header Content-Type text/plain;
-            return 200 'ok';
-        }
 
         location / {
             return 200 '{"message":"Bienvenido a Coffee_Shop_API"}';
         }
 
         location /users/ {
-            proxy_pass http://users_backend$uri;
+            proxy_pass http://users_backend;
         }
 
         location /customers/ {
-            proxy_pass http://customers_backend$uri;
+            proxy_pass http://customers_backend;
         }
 
         location /products/ {
-            proxy_pass http://inventory_backend$uri;
+            proxy_pass http://inventory_backend;
         }
 
         location /sales/ {
-            proxy_pass http://sales_backend$uri;
-        }
-
-        location /health {
-            default_type application/json;
-            return 200 '{"status":"healthy"}';
-        }
-
-        error_page 404 /404.json;
-        location = /404.json {
-            return 404 '{"error":"Not found"}';
-        }
-
-        error_page 500 502 503 504 /50x.json;
-        location = /50x.json {
-            return 500 '{"error":"Upstream failure"}';
+            proxy_pass http://sales_backend;
         }
     }
 }
