--- a/nginx.conf
+++ b/nginx.conf
@@ -1,5 +1,5 @@
-user nginx;
-worker_processes auto;
+user nginx; #Usuario del sistema con el que corre el worker
+worker_processes auto; #Número de procesos worker
 
 error_log /var/log/nginx/error.log warn;
 pid /var/run/nginx.pid;
@@ -18,18 +18,20 @@ http {
 
     access_log /var/log/nginx/access.log main;
 
+    # Timeouts globales
     proxy_connect_timeout 5s;
     proxy_send_timeout 30s;
     proxy_read_timeout 30s;
 
+    # Headers comunes para todas las peticiones proxied
     proxy_set_header Host $host;
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header Authorization $http_authorization;
 
-    # ============================================================
-    #   BACKENDS — Correcto en Docker Compose y listo para escalado
-    # ============================================================
+    # ---------------------------------
+    #  UPSTREAMS (Balanceador de carga)
+    # ---------------------------------
     upstream users_backend {
         least_conn;
         server users-service:3001;
@@ -50,30 +52,50 @@ http {
         server sales-service:3004;
     }
 
-    # ============================================================
-    #   SERVER
-    # ============================================================
+    #upstream auth_backend {
+    #    least_conn;
+    #    server auth-service:3005;
+    #}
+
     server {
         listen 80;
+        server_name coffee.shop.com;
 
+        # Healthcheck de Nginx
+        # --------------------
+        location = /_nginx_health {
+            add_header Content-Type text/plain;
+            return 200 'ok';
+        }
+
+        # Home
+        # ----------
         location / {
             return 200 '{"message":"Bienvenido a Coffee_Shop_API"}';
         }
 
+        # ----------------------------------------
+        #  RUTAS POR MICROSERVICIO (Proxy Inverso)
+        # ----------------------------------------
+
         location /users/ {
-            proxy_pass http://users_backend;
+            proxy_pass http://users_backend$request_uri;
         }
 
         location /customers/ {
-            proxy_pass http://customers_backend;
+            proxy_pass http://customers_backend$request_uri;
         }
 
         location /products/ {
-            proxy_pass http://inventory_backend;
+            proxy_pass http://inventory_backend$request_uri;
         }
 
         location /sales/ {
-            proxy_pass http://sales_backend;
+            proxy_pass http://sales_backend$request_uri;
         }
+
+        #location /auth/ {
+        #    proxy_pass http://auth_backend$request_uri;
+        #}
     }
 }
